# multi-mcp

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  changes-plan.spec  llama-stack.py  main.py  pyproject.toml  requirements.txt
examples/: connect_langgraph_client.py
examples/config/: mcp.json  mcp_k8s.json  mcp_sse.json  mcp_unit_convertor.json
examples/k8s/: multi-mcp.yaml
src/multimcp/: auth.py  config.py  constants.py  error_handling.py  exceptions.py  mcp_client.py  mcp_proxy.py  multi_mcp.py  route_handlers.py
src/multimcp/capabilities/: __init__.py  base.py  prompts.py  resources.py  tools.py
src/multimcp/transports/: __init__.py  base.py  sse_transport.py  stdio_transport.py  stream_transport.py
src/utils/: logger.py
tests/: e2e_test.py  k8s_test.py  lifecycle_test.py  proxy_test.py  utils.py
tests/tools/: calculator.py  get_weather.py  get_weather_sse.py  unit_convertor.py
