[project]
name = "multi-mcp"
version = "0.1.0"
description = "MCP proxy project with multi-client support"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.1.1",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "pytest-asyncio>=1.0.0",
    "rich>=14.0.0",
]

[scrip]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::pydantic.warnings.PydanticDeprecatedSince211"]
