[project]
name = "multi-mcp"
version = "0.1.0"
description = "MCP proxy project with multi-client support"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.1.1",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "pytest-asyncio>=1.0.0",
    "rich>=14.0.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120
exclude = [".venv", "examples", "tests", "llama-stack.py"]

[tool.ruff.lint]
ignore = ["C901", "E266"]
select = ["B", "B9", "C", "D", "E", "F", "I", "PL", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::pydantic.warnings.PydanticDeprecatedSince211"]
